--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,6 @@
     [dataSource]="securities$ | async"
     [isLoading]="loadingSecurities$ | async">
 
-    <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let security; let idx = index"> {{ idx }} </td>
-    </ng-container>
-
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let security"> {{ security.name }} </td>
@@ -26,11 +21,11 @@
 
     <!-- Custom row definitions to be provided to the wrapper table. -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns; let idx = index"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     <!-- Row shown when there is no matching data that will be provided to the wrapper table. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="3">No data</td>
+      <td class="mat-cell" colspan="3"><i>No data</i></td>
     </tr>
   </filterable-table>
 </div>
