--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,3 @@
-<div class="table-wrapper">
-  <filterable-table
-    class="security-list"
-    [dataSource]="securities$ | async"
-    [isLoading]="loadingSecurities$ | async">
-
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let security"> {{ security.name }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
-      <td mat-cell *matCellDef="let security"> {{ security.type }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="currency">
-      <th mat-header-cell *matHeaderCellDef> Currency </th>
-      <td mat-cell *matCellDef="let security"> {{ security.currency }} </td>
-    </ng-container>
-
-    <!-- Custom row definitions to be provided to the wrapper table. -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    <!-- Row shown when there is no matching data that will be provided to the wrapper table. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="3"><i>No data</i></td>
-    </tr>
-  </filterable-table>
+<div class="security-list-wrapper">
+  <securities-list></securities-list>
 </div>
