share my solution of a real generic filter-bar

--- a/src/app/components/filterable-table/filterable-table.component.html
+++ b/src/app/components/filterable-table/filterable-table.component.html
@@ -1,5 +1,6 @@
-﻿<!-- Feel free to replace this placeholder with your filterbar -->
-<fieldset class="filter-bar-placeholder"><legend>Filter bar should go here</legend></fieldset>
+﻿<div class="filter-bar-wrapper">
+  <filter-bar [filterFormData]="filterData" (filterFormOutput)="filterBarOutput($event)"></filter-bar>
+</div>
 
 <div class="table-wrapper">
   <div class="loading-indicator" *ngIf="isLoading"><mat-spinner></mat-spinner></div>
