--- a/src/app/components/filterable-table/filterable-table.component.scss
+++ b/src/app/components/filterable-table/filterable-table.component.scss
@@ -3,9 +3,8 @@ table {
   width: 100%;
 }
 
-.filter-bar-placeholder {
-  height: 100px;
-  margin-bottom: 20px;
+.filter-bar-wrapper {
+  padding-bottom: 20px;
 }
 
 .table-wrapper {
